# 2024-synthetic-data-binpicking

./: README.md
franka_control/: README.md
franka_control/franka_example_controllers/: CMakeLists.txt
franka_control/franka_example_controllers/src/: joint_position_example_controller.cpp  read_csv2.cpp
franka_control/franka_gripper/: CMakeLists.txt
franka_control/franka_gripper/src/: close_gripper.cpp  homing_gripper.cpp  open_gripper.cpp  test_gripper.cpp
generate_synthetic_dataset/blender/: README.md  fillet1.blend  fillet2.blend  plane_rb_tex.blend  render_dataset.py  render_settings.txt
mask_rcnn_train_eval/: README.md  finetune_maskrcnn.py  mAP_outputsxlsx.py  test_init.txt  train_init.txt  train_maskrcnn.py
pipeline/: README.md
pipeline/moveit2_ws-moveit_code/: README.md
pipeline/moveit2_ws-moveit_code/install/moveit2_tutorials/launch/: panda_moveit_config_pipeline.rviz
pipeline/moveit2_ws-moveit_code/install/mtc_tutorial/share/mtc_tutorial/launch/: open_gripper.launch.py
pipeline/moveit2_ws-moveit_code/install/rs_move/share/rs_move/launch/: launch_rviz.launch.py
pipeline/moveit2_ws-moveit_code/mtc_tutorial/: CMakeLists.txt  package.xml
pipeline/moveit2_ws-moveit_code/mtc_tutorial/src/: mtc_tutorial.cpp
pipeline/moveit2_ws-moveit_code/rs_move/: CMakeLists.txt  package.xml
pipeline/ros2_ws-roscode/: README.md  package.xml  setup.cfg  setup.py
pipeline/ros2_ws-roscode/percept_wmodel/: add_frame.py  imseg_to_cobj.py  instance_seg_realsense.py  listener_to_csv.py  pipeline_settings.txt  segmentation.py
